--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <meta charset="utf8"></meta>
 <html>
-<head></head>
+	<head><title>UNICK, unique</title></head>
 <body>
   <script src="compiler.js">
+	  <h1>UNICK, unique.</h1>
+	  <h2>compiler</h2>
 	</script>
 	<input type="text" name="input" style="width:1000px; height:20px; font-size:16px;"></input></br>
 	<button onclick="try{compiler()}catch(error){document.getElementsByName('output')[0].innerHTML = error;}">run</button>
